# bond_extractor

./: .gitignore  1.csv  README.md  config.ini  config.py  pyproject.toml  requirements.txt  run.py
scripts/: run_example.py  test.py
src/: __init__.py  extractor.py  models.py  scraper.py  sec_client.py  utils.py
tests/: test_parsing.py
