[project]
name = "bond-scraper"
version = "0.1.0"
description = "Production-ready bond data scraper for SEC filings using an LLM"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Harlan" }]
dependencies = [
  "pandas",         # latest allowed by your Python version
  "requests",
  "google-genai",
  "beautifulsoup4", # if you add the bs4 cleaner
  "lxml",
  "edgartools"
]

[tool.uv]
dev-dependencies = [
  "pytest",
]
